--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
     <script src="app.js" defer></script>
+    <script src="https://kit.fontawesome.com/9bed6e624e.js" crossorigin="anonymous"></script>
 </head>
 </head>
 <body>
