--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
         <button class="btn login">Log In</button></header>
      <div class="hero">
          <div class="container">
-             <input type="submit" value="Add Book" id="add" class="btn add">
-             <div class="library"></div>
+             <div id="containerHeader">
+                <input type="submit" value="Add Book" id="add" class="btn add">
+                <input type="text" class="form-control" id="filter" placeholder="Search Books...">
+            </div>
+
+            <div class="library"></div>
          </div>
      </div>
      <div class="submitCard">
