overlay and submit form goes away when you click off form

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           </div>
         </div>
         <footer>Copyleft 2069</footer>
+        <div class="overlay" id="overlay"></div>
     </div>
 
 </body>
