--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <div id="page-container">
      <header><h1>Library</h1> 
-        <button class="btn login">Log In</button></header>
+        <button class="btn login">Log In</button>
+    </header>
      <div class="hero">
          <div class="container">
              <div id="containerHeader">
